--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" href="favicon-32x32.png" media="(prefers-color-scheme: dark)"> 
+    <link rel="icon" href="/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LuizGSN portfólio</title>
+    <title>LuizGSN</title>
   </head>
   <body>
     <div id="root"></div>
